# argus-devkit

./: README.md
.github/workflows/: smoke-cli.yml  smoke-protocol.yml
cli/: README.md  pyproject.toml
cli/src/: main.py
common/manifest/: argus-plugin.schema.json
common/protocol/: README.md  engine-automation-capabilities.md  test-mode.md
common/protocol/schemas/: event-envelope.schema.json  event-payloads.schema.json
common/test-fixtures/: invalid-engine.json  live-event-godot.json  live-event-unity.json  live-event-unreal.json
godot/: README.md
godot/addons/argus/: plugin.cfg  plugin.gd  runtime.gd
godot/samples/: README.md
godot/tests/: README.md
python/: README.md  pyproject.toml
python/src/argus/: __init__.py  sdk.py
runner/: README.md  human_like_runner.py
samples/: README.md
support/: escalation-template.md  release-checklist.md  runbook.md
unity/: README.md  package.json
unity/Editor/: Argus.Editor.asmdef  ArgusPostBuildProcessor.cs
unity/Runtime/: Argus.Runtime.asmdef
unity/Runtime/Attributes/: ArgusStateAttribute.cs
unity/Runtime/Core/: ArgusConfig.cs  ArgusMultimodalOracle.cs  ArgusSession.cs  AutomationBridgeRegistry.cs  IAutomationBridge.cs  InputInjector.cs  InputShim.cs  KillSwitch.cs  RngCapture.cs  SaveStateManager.cs  StateStreamer.cs
unity/Runtime/Live/: LiveTelemetry.cs
unity/Samples~/: README.md
unity/Tests/Editor/: Argus.Editor.Tests.asmdef  ArgusEditorSmokeTests.cs
unity/Tests/Runtime/: Argus.Runtime.Tests.asmdef  ArgusRuntimeSmokeTests.cs
unreal/: Argus.uplugin  README.md
unreal/Samples/: README.md
(+9 files in other folders)
