[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27", "rich>=13.7", "pyyaml>=6.0"]

[project.scripts]
argus = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
