[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argus-sdk"
version = "0.1.0"
description = "Argus SDK for Python game servers, headless bots, and CI pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://argus.ludotronics.io"
Documentation = "https://argus.ludotronics.io/docs/sdk-python"
Repository = "https://github.com/ludotronics/argus-devkit"
